$Id: History,v 1.16 1999-07-06 18:15:39 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

6th July 1999  John Allison (examples-01-00-13)
- Relaxed non-optimised compiling for ExN04PhysicsList.cc for Linux.

24th June 1999  John Allison (examples-01-00-12)
- Updated some .out files for geant4-00-cand-13.
- Tagged N05 changes (Marc).

17th June 1999  John Allison (examples-01-00-11)
- Updated exampleN03.out and exampleN04.EMtest.out for geant4-00-cand-11a.

7th June 1999  John Allison (examples-01-00-10)
- Compiled ExN04PhysicsList.cc non-optimised on Linux-g++.

5th June 1999  John Allison (examples-01-00-09)
- exampleN04/GNUmakefile: Force non-optimised compliation of some
  files on HP with aCC: HP ANSI C++ B3910B A.01.15.
- For NT (Gunter): G4UIsession* session=0 instead of session(NULL).

28th May 1999  John Allison  (examples-01-00-08)
- Reordered #include "G4Timer.hh" (must be first) in exampleN05 and 6.

27th May 1999  John Allison  (examples-01-00-07)
- Updated exampleN04.out to correspond to geant4-00-cand-09b.

25th May 1999  John Allison  (examples-01-00-06)
- Updated exampleN04.out to correspond to em-01-00-05a.

19th May 1999  John Allison  (examples-01-00-05)