@@ -94,7 +94,6 @@ G4VIS_USE_OPENGLX=;export G4VIS_USE_OPENGLX
 G4VIS_USE_OPENGLXM=;export G4VIS_USE_OPENGLXM
 G4VIS_USE_OIX=;export G4VIS_USE_OIX
 G4VIS_USE_OIWIN32=;export G4VIS_USE_OIWIN32
-G4VIS_USE_RAYX=;export G4VIS_USE_RAYX
 G4VIS_USE_VRML=;export G4VIS_USE_VRML
 G4VIS_USE_VRMLFILE=;export G4VIS_USE_VRMLFILE
 #
