@@ -1,4 +1,4 @@
-$Id: History,v 1.16 1999-07-06 18:15:39 johna Exp $
+$Id: History,v 1.17 1999-08-04 16:40:05 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+4th August 1999  John Allison
+ - Eliminated references to G4Ray in ExN02VisManager.cc and N03.
 
 6th July 1999  John Allison (examples-01-00-13)
 - Relaxed non-optimised compiling for ExN04PhysicsList.cc for Linux.
